--- a/style.css
+++ b/style.css
@@ -105,6 +105,23 @@ img {
   left: 80%;
 }
 
+@media screen and (max-width: 1280px) {
+  .container {
+    grid-template-columns: 1fr 1fr;
+  }
+  .middle {
+    display: flex;
+  }
+  .card1,
+  .card4 {
+    margin-top: 0rem;
+  }
+  .card4 {
+    position: relative;
+    bottom: 15rem;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .reliable {
     font-size: x-large;
@@ -124,6 +141,10 @@ img {
   .card1,
   .card4 {
     margin-top: 0rem;
+  }
+
+  .card4 {
+    position: inherit;
   }
 
   img {
